--- a/scss/_comicbubbles.scss
+++ b/scss/_comicbubbles.scss
@@ -62,9 +62,9 @@ $sqrt2: 1.4142135623730950488016887242096980785696718753769;
 		@if $side == right {
 			@include make-bubble-pip($right:pem($border-width * ($pip-scalar * -2)), $bottom:pem($pip-offset), $bcb:$bubble-border-color, $bcl:$bubble-border-color);
 		} @else if $side == left {
-			@include make-bubble-pip($right:pem($border-width * ($pip-scalar * -2)), $bottom:pem($pip-offset), $bcb:$bubble-border-color, $bcl:$bubble-border-color);
+			@include make-bubble-pip($left:pem($border-width * ($pip-scalar * -2)), $bottom:pem($pip-offset), $bcb:$bubble-border-color, $bcr:$bubble-border-color);
 		} @else if $side == top {
-			@include make-bubble-pip($right:pem($border-width * ($pip-scalar * -2)), $bottom:pem($pip-offset), $bcb:$bubble-border-color, $bcl:$bubble-border-color);
+			@include make-bubble-pip($top:pem($border-width * ($pip-scalar * -2)), $right:pem($pip-offset), $bcb:$bubble-border-color, $bcr:$bubble-border-color);
 		} @else {
 			@include make-bubble-pip($bottom:pem($border-width * ($pip-scalar * -2)), $right:pem($pip-offset), $bct:$bubble-border-color, $bcr:$bubble-border-color);
 		}
@@ -75,9 +75,9 @@ $sqrt2: 1.4142135623730950488016887242096980785696718753769;
 		@if $side == right {
 			@include make-bubble-pip($right:pem(1 + ceil( $border-width * -1 * ((2 * $pip-scalar) - 1 - $sqrt2))), $bottom:pem($border-width + $pip-offset), $bcb:$bubble-background-color, $bcl:$bubble-background-color);
 		} @else if $side == left {
-			@include make-bubble-pip($right:pem(1 + ceil( $border-width * -1 * ((2 * $pip-scalar) - 1 - $sqrt2))), $bottom:pem($border-width + $pip-offset), $bcb:$bubble-background-color, $bcl:$bubble-background-color);
+			@include make-bubble-pip($left:pem(1 + ceil( $border-width * -1 * ((2 * $pip-scalar) - 1 - $sqrt2))), $bottom:pem($border-width + $pip-offset), $bcb:$bubble-background-color, $bcr:$bubble-background-color);
 		} @else if $side == top {
-			@include make-bubble-pip($right:pem(1 + ceil( $border-width * -1 * ((2 * $pip-scalar) - 1 - $sqrt2))), $bottom:pem($border-width + $pip-offset), $bcb:$bubble-background-color, $bcl:$bubble-background-color);
+			@include make-bubble-pip($top:pem(1 + ceil( $border-width * -1 * ((2 * $pip-scalar) - 1 - $sqrt2))), $right:pem($border-width + $pip-offset), $bcb:$bubble-background-color, $bcr:$bubble-background-color);
 		} @else {
 			@include make-bubble-pip($bottom:pem(1 + ceil( $border-width * -1 * ((2 * $pip-scalar) - 1 - $sqrt2))), $right:pem($border-width + $pip-offset), $bct:$bubble-background-color, $bcr:$bubble-background-color);
 		}
