--- a/scss/_comicbubbles.scss
+++ b/scss/_comicbubbles.scss
@@ -23,15 +23,22 @@ $bubble-lead-side: bottom !default;
 $bubble-overflow: auto !default;
 $bubble-content-padding: 8 !default;
 
-$pip-scalar: 4 !default;
+$pip-size: 30 !default;
 $pip-offset: 40 !default;
 
 $sqrt2: 1.4142135623730950488016887242096980785696718753769;
 
 
+
 // makes a speech bubble
 // $side is the side you want the directional triangle on
 @mixin speech-bubble( $side:$bubble-lead-side, $height:$bubble-height, $border-width:$bubble-border-thickness ) {
+	
+	$small-pip-ouside: pem($pip-size * -1);
+	$big-pip-outside: pem( -1 * ($pip-size + ($border-width * ($sqrt2 + 1))) );
+	$small-pip-offset: pem($border-width + $pip-offset);
+	$big-pip-offset: pem($pip-offset);
+
 	position: relative;
 	height: pem($height + ($bubble-padding-vertical * 2));
 
@@ -57,29 +64,29 @@ $sqrt2: 1.4142135623730950488016887242096980785696718753769;
 		height: 0;
 	}
 	&:before {
-		border: pem($border-width * $pip-scalar) solid;
+		border: pem( ($pip-size + $border-width * ($sqrt2 + 1)) / 2) solid;
 		z-index: $bubble-base-zindex + 1;
 		@if $side == right {
-			@include make-bubble-pip($right:pem($border-width * ($pip-scalar * -2)), $bottom:pem($pip-offset), $bcb:$bubble-border-color, $bcl:$bubble-border-color);
+			@include make-bubble-pip($right:$big-pip-outside, $bottom:$big-pip-offset, $bcb:$bubble-border-color, $bcl:$bubble-border-color);
 		} @else if $side == left {
-			@include make-bubble-pip($left:pem($border-width * ($pip-scalar * -2)), $bottom:pem($pip-offset), $bcb:$bubble-border-color, $bcr:$bubble-border-color);
+			@include make-bubble-pip($left:$big-pip-outside, $bottom:$big-pip-offset, $bcb:$bubble-border-color, $bcr:$bubble-border-color);
 		} @else if $side == top {
-			@include make-bubble-pip($top:pem($border-width * ($pip-scalar * -2)), $right:pem($pip-offset), $bcb:$bubble-border-color, $bcr:$bubble-border-color);
+			@include make-bubble-pip($top:$big-pip-outside, $right:$big-pip-offset, $bcb:$bubble-border-color, $bcr:$bubble-border-color);
 		} @else {
-			@include make-bubble-pip($bottom:pem($border-width * ($pip-scalar * -2)), $right:pem($pip-offset), $bct:$bubble-border-color, $bcr:$bubble-border-color);
+			@include make-bubble-pip($bottom:$big-pip-outside, $right:$big-pip-offset, $bct:$bubble-border-color, $bcr:$bubble-border-color);
 		}
 	}
 	&:after {
-		border: pem($border-width * ((2 * $pip-scalar) - 1 - $sqrt2) /2 ) solid;
+		border: pem( $pip-size / 2 ) solid;
 		z-index: $bubble-base-zindex + 2;
 		@if $side == right {
-			@include make-bubble-pip($right:pem(1 + ceil( $border-width * -1 * ((2 * $pip-scalar) - 1 - $sqrt2))), $bottom:pem($border-width + $pip-offset), $bcb:$bubble-background-color, $bcl:$bubble-background-color);
+			@include make-bubble-pip($right:$small-pip-ouside, $bottom:$small-pip-offset, $bcb:$bubble-background-color, $bcl:$bubble-background-color);
 		} @else if $side == left {
-			@include make-bubble-pip($left:pem(1 + ceil( $border-width * -1 * ((2 * $pip-scalar) - 1 - $sqrt2))), $bottom:pem($border-width + $pip-offset), $bcb:$bubble-background-color, $bcr:$bubble-background-color);
+			@include make-bubble-pip($left:$small-pip-ouside, $bottom:$small-pip-offset, $bcb:$bubble-background-color, $bcr:$bubble-background-color);
 		} @else if $side == top {
-			@include make-bubble-pip($top:pem(1 + ceil( $border-width * -1 * ((2 * $pip-scalar) - 1 - $sqrt2))), $right:pem($border-width + $pip-offset), $bcb:$bubble-background-color, $bcr:$bubble-background-color);
+			@include make-bubble-pip($top:$small-pip-ouside, $right:$small-pip-offset, $bcb:$bubble-background-color, $bcr:$bubble-background-color);
 		} @else {
-			@include make-bubble-pip($bottom:pem(1 + ceil( $border-width * -1 * ((2 * $pip-scalar) - 1 - $sqrt2))), $right:pem($border-width + $pip-offset), $bct:$bubble-background-color, $bcr:$bubble-background-color);
+			@include make-bubble-pip($bottom:$small-pip-ouside, $right:$small-pip-offset, $bct:$bubble-background-color, $bcr:$bubble-background-color);
 		}
 	}
 
